deployments/pathweb/tdarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tdarr-headless
  namespace: media-services
  labels:
    app.kubernetes.io/name: tdarr
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: tdarr
  ports:
  - port: 8266
    targetPort: tdarr-server
    name: tdarr-server
  - port: 8265
    targetPort: tdarr-webui
    name: tdarr-webui
