deployments/pathweb/tdarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdarr
  labels:
    app.kubernetes.io/name: tdarr
    external-dns: local-pdns
  annotations: {}
    # traefik.ingress.kubernetes.io/router.middlewares: home-network-ak-outpost-authentik-embedded-outpost@kubernetescrd
spec:
  rules:
  - host: tdarr.services.home.yrf.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tdarr-headless
            port: 
              name: tdarr-webui
  tls:
  - hosts:
    - tdarr.services.home.yrf.me
    secretName: services-wildcard-cert
